# mm-plugins

./: .gitignore  pyproject.toml
.currency_shop_generator/: generate_shop.py
.github/workflows/: test-gatos.yml
aternos/: aternos_helper.py  requirements.txt
currency/: currency.py  data.json  generate_shop.py  shops_url.json
funpost/: funpost.py
gacha/: banner.py  data.json  data.py  gacha.py  generate_shop.py  item.py  player.py  shop.py  shops_url.json
gacha/gachalib/: banner.py  data.py
gato/: ArgentiGato.py  animations.json  cli.py  data.py  gato.py  gatos.py  legacy_data.json  player.py  team.py
gato/docs/: conf.py  index.rst
gato/docs/extensions/: attributetable3.py
gato/gatos/: ABaseGato.py  ABaseItem.py  AConsumable.py  AEquipment.py  AGatoConsumable.py  ArgentiGato.py  AvocadoToastConsumable.py  BladeGato.py  CatTreatsConsumable.py  ClaraGato.py  DanHengGato.py  DefibrilatorConsumable.py  EfficiencyFoodEq.py  ExampleGato.py  FakeMouseEq.py  FeatherTeaserConsumable.py  FuxuanGato.py  GuinaifenGato.py  HertaGato.py  HimekoGato.py  KafkaGato.py  KornGato.py  LNYGato.py  LynnGato.py  MakGato.py  MapleGato.py  MedicalInsuranceTEq.py  MedikitConsumable.py  MedkitConsumable.py  ModalGato.py  NormalGato.py  NormalGato2.py  QingqueGato.py  RedPacketConsumable.py  ReiGato.py  SalmonConsumable.py  SeeleGato.py  StrongGato.py  SwedeGato.py  SwedishFishConsumable.py  (+5 more)
gato/tests/gatos/: smoke_test.py
karaoke/: karaoke.py
parrot/: parrot.py
qotd/: qotd.py  requirements.txt
