[tool.poetry]
name = "mm-plugins"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.18"
discord = "^2.3.2"


[tool.poetry.group.dev.dependencies]
discord = "^2.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
